--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ set(CMAKE_CXX_STANDARD 23) # Enable the C++23 standard
 add_executable(bittorrent ${SOURCE_FILES})
 
 find_package(CURL REQUIRED)
-target_link_libraries(your_bittorrent.sh PRIVATE CURL::libcurl)
+target_link_libraries(Main.cpp PRIVATE CURL::libcurl)
