--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,10 @@
         "xutility": "cpp",
         "fstream": "cpp",
         "deque": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "condition_variable": "cpp",
+        "coroutine": "cpp",
+        "resumable": "cpp",
+        "future": "cpp"
     }
 }
